<resources>
    <string name="app_name">To-Do List</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="accountLogin">New User?</string>
    <string name="registerLogin">Register</string>
    <string name="cloase">Close</string>
    <string name="register">Register</string>
    <string name="something">something</string>
    <string name="email">Email</string>
    <string name="lreadyaccount">Have An Account?</string>
    <string name="your_todos">Yours ToDos</string>
    <string name="todo_heading">Todo Heading</string>
    <string name="todo_description">ToDo Description</string>
    <string name="new_todo">New Todo</string>
    <string name="add_new_todo">Add New Todo</string>
    <string name="submit">Submit</string>
    <string name="edit_todo">Edit Todo</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
</resources>