<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gotoLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/themeColor"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textView"
        style="@style/viewParent.headerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/register"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.142" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063"
        app:srcCompat="@drawable/ic_login_hero" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="314dp"
        android:layout_height="394dp"
        app:cardBackgroundColor="@color/login_bk_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintVertical_bias="0.200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="332dp"
            android:layout_height="match_parent">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameLayoutText"
                android:layout_width="298dp"
                android:layout_height="53dp"
                app:endIconMode="clear_text"
                app:layout_constraintBottom_toTopOf="@+id/registerEmail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.264"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.509">

                <EditText
                    android:id="@+id/registerUsername"
                    android:layout_width="302dp"
                    android:layout_height="49dp"
                    android:autofillHints="Username"
                    android:backgroundTint="@color/themeColor"
                    android:hint="@string/username"
                    android:imeActionLabel="@string/username"
                    android:inputType="textPersonName"
                    android:shadowColor="@color/contentTextColor"
                    app:endIconMode="clear_text"
                    app:layout_constraintBottom_toTopOf="@+id/registerEmail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.282"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.542"
                    tools:targetApi="lollipop" />

            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/registerEmail"
                android:layout_width="302dp"
                android:layout_height="49dp"
                android:layout_marginTop="104dp"
                android:autofillHints="Email"
                android:backgroundTint="@color/themeColor"
                android:hint="@string/email"
                android:imeActionLabel="@string/username"
                android:inputType="textEmailAddress"
                android:shadowColor="@color/contentTextColor"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:targetApi="lollipop" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTextLayout"
                android:layout_width="332dp"
                android:layout_height="54dp"
                android:layout_marginBottom="152dp"
                app:endIconMode="password_toggle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent">

                <EditText
                    android:id="@+id/registerPassword"
                    android:layout_width="302dp"
                    android:layout_height="49dp"
                    android:autofillHints="Password"
                    android:backgroundTint="@color/themeColor"
                    android:hint="@string/password"
                    android:imeActionLabel="@string/username"
                    android:inputType="textPassword"
                    android:shadowColor="@color/contentTextColor"
                    app:endIconMode="password_toggle"
                    app:layout_constraintBottom_toTopOf="@+id/registerUser"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/registerEmail"
                    app:layout_constraintVertical_bias="0.573"
                    tools:targetApi="lollipop" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/registerUser"
                style="@style/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="76dp"
                android:background="@drawable/button_background_blue"
                android:text="@string/register"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.38"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/goToLoginImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.007"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.32"
        app:srcCompat="@drawable/ic_back_img" />


</androidx.constraintlayout.widget.ConstraintLayout>